[package]
name = "metashrew-rs"
version = "0.1.0"
description = "rust version of metashrew"
repository = "https://github.com/sandshrewmetaprotocols/metashrew-rs"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitcoin = "0.31.2"
bytes = "1.6.0"
cfg-if = "1.0.0"
rlp = "0.5.2"
wasm-bindgen = "0.2.92"
ordinals = "0.0.8"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
