[package]
name = "metashrew-rs"
version = "0.1.0"
description = "rust version of metashrew"
repository = "https://github.com/sandshrewmetaprotocols/metashrew-rs"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitcoin = "0.31.2"
bytes = "1.6.0"
cfg-if = "1.0.0"
wasm-bindgen = "0.2.92"
ordinals = "0.0.8"
protobuf = "3"

[build-dependencies]
protobuf-codegen = "3.4.0"
protoc-rust = { version = "2.28.0" }
protoc-bin-vendored = "3.0.0"

